update css, and fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
     background-size: cover;
     background-color: #8cb9f0;
     background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: middle;
 }
 
 .landing-page div,
@@ -24,7 +26,7 @@ header {
 .pageTitle {
     font-family: 'New Tegomin', serif;
     text-align: center;
-    font-size: 72px;
+    font-size: 4em;
     color: #162e2c;
 }
 
